--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <span class="chip">✉️ <a href="mailto:sanjithkumar711@gmail.com">sanjithkumar711@gmail.com</a></span>
           <span class="chip">🔗 <a href="https://github.com/SANJITHKUMAR-EMBEDDED" target="_blank">github.com/SANJITHKUMAR-EMBEDDED</a></span>
           <span class="chip">💼 <a href="https://www.linkedin.com/in/sanjithkumar-embedded" target="_blank">linkedin.com/in/sanjithkumar-embedded</a></span>
-          <span class="chip">📞 +91-9345561489</span>
+          <span class="chip">📞 +91-8838803443</span>
         </div>
       </header>
 
@@ -64,7 +64,7 @@
             <h2>Internships</h2>
             <ul>
               <li><b>Chip to Start</b> – VLSI RTL to GDSII flow (Jul 2024)</li>
-              <li><b>Karthick Tech</b> – PCB Design, Soldering, Testing (Jun 2024)</li>
+              <li><b>RBV Electronics</b> – PCB Design, Soldering, Testing (Jun 2024)</li>
             </ul>
           </section>
 
@@ -112,8 +112,8 @@
           <section>
             <h2>Education</h2>
             <p><b>B.E., Electronics & Communication Engineering</b><br>
-            Sri Ramakrishna Engineering College, Coimbatore<br>
-            <span class="muted">2021 – 2025 · CGPA: 8.0/10</span></p>
+            SNS College of Technology, Coimbatore<br>
+            <span class="muted">2021 – 2026 · CGPA: 8.5/10</span></p>
           </section>
 
           <section>
