--- a/thumbnail.html
+++ b/thumbnail.html
@@ -1,3 +1,3 @@
 <a href="https://sanjithkumar-embedded.github.io/Resume/">
-  <img src="your-image.jpg" alt="Descriptive text for the image">
+  <img src="1756089707683 (2).png" alt="Descriptive text for the image">
 </a>
