--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- LinkedIn Preview Meta Tags -->
 <meta property="og:title" content="Sanjith Kumar R — Embedded Systems Developer">
 <meta property="og:description" content="Explore my embedded systems portfolio with projects, skills, and internships.">
-<meta property="og:image" content="https://SANJITHKUMAR-EMBEDDED.github.io/Resume/thumbnail.jpg">
+<meta property="og:image" content="https://SANJITHKUMAR-EMBEDDED.github.io/Resume/thumbnail.png">
 <meta property="og:url" content="https://SANJITHKUMAR-EMBEDDED.github.io/Resume/">
 <meta property="og:type" content="website">
 
