--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sanjith Kumar R — Embedded Systems Developer</title>
   <meta name="description" content="Resume of Sanjith Kumar R — Embedded Systems Developer" />
-  <!-- LinkedIn Preview Meta Tags -->
+
+ <!-- LinkedIn Preview Meta Tags -->
 <meta property="og:title" content="Sanjith Kumar R — Embedded Systems Developer">
 <meta property="og:description" content="Explore my embedded systems portfolio with projects, skills, and internships.">
 <meta property="og:image" content="https://sanjithkumar-embedded.github.io/Resume/thumbnail.png">
-<meta property="og:url" content="https://SANJITHKUMAR-EMBEDDED.github.io/Resume/">
+<meta property="og:url" content="https://sanjithkumar-embedded.github.io/Resume/">
 <meta property="og:type" content="website">
+
 
   <style>
     :root{
