--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <!-- LinkedIn Preview Meta Tags -->
 <meta property="og:title" content="Sanjith Kumar R — Embedded Systems Developer">
 <meta property="og:description" content="Explore my embedded systems portfolio with projects, skills, and internships.">
-<meta property="og:image" content="https://sanjithkumar-embedded.github.io/Resume/thumbnail.png">
+  <meta property="og:image" content="https://sanjithkumar-embedded.github.io/Resume/og-image.png">
 <meta property="og:url" content="https://sanjithkumar-embedded.github.io/Resume/">
 <meta property="og:type" content="website">
 
