Update kicad in skill index.html

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
               <span class="chip">STM32CubeProgrammer</span>
               <span class="chip">MPLAB X</span>
               <span class="chip">Proteus</span>
-              <span class="chip">Git & GitHub</span>
+              <span class="chip">KiCad</span>
+              <span class="chip">Git & GitHub</span> 
             </div>
           </div>
           <div class="item two-col">
