--- a/index.html
+++ b/index.html
@@ -99,13 +99,15 @@
         <span class="role">Embedded Systems Developer</span>
       </div>
       <div class="links">
-        <a class="badge" href="https://github.com/SANJITHKUMAR-EMBEDDED" target="_blank" rel="noopener">GitHub: SANJITHKUMAR-EMBEDDED</a>
         <a class="badge" href="mailto:sanjithkumar711@gmail.com">sanjithkumar711@gmail.com</a>
-        <a class="badge" href="tel:+918838803443">+91 8838803443</a>
+         <a class="badge" href="tel:+918838803443">+91 8838803443</a>
+        <a class="badge" href="https://github.com/SANJITHKUMAR-EMBEDDED" target="_blank" rel="noopener">GitHub: SANJITHKUMAR-EMBEDDED</a>
         <a class="badge" href="https://www.linkedin.com/in/sanjith-kumar-r" target="_blank" rel="noopener">LinkedIn</a>
       
       </div>
-      <p style="margin:6px 0 0; color:var(--muted)">Electronics and Communication Engineering student with practical experience in embedded systems and PCB assembly. Proficient in microcontroller programming, circuit design, and hardware testing. Seeking a role to apply and enhance my skills in developing innovative and reliable embedded solutions.</p>
+      <p style="margin:6px 0 0; color:var(--muted)">Final-year ECE student with hands-on experience in STM32 and PIC microcontroller programming, PCB design using  
+KiCad, and circuit simulation in Proteus. Skilled in UART, SPI, I2C protocols and embedded C. Seeking an embedded 
+role to develop efficient real-time hardware solutions.</p>
     </header>
 
     <main>
@@ -149,7 +151,7 @@
               <span class="chip">Git & GitHub</span> 
             </div>
           </div>
-          <div class="item two-col">
+          <div class="item">
             <div>
               <h3>Programming</h3>
               <div class="chips">
@@ -158,12 +160,13 @@
               </div>
             </div>
             <div>
+               <div class="item">
               <h3>Soft Skills</h3>
               <div class="chips">
-                <span class="chip">Problem-solving</span>
-                <span class="chip">Attention to Detail</span>
+                <span class="chip">Embedded debugging</span>
+                <span class="chip">Hardware accuracy</span>
                 <span class="chip">Team Collaboration</span>
-                <span class="chip">Adaptability</span>
+                <span class="chip">Tool adaptability</span>
               </div>
             </div>
           </div>
